Fix vertical align

--- a/src/components/enigma/Enigma.module.css
+++ b/src/components/enigma/Enigma.module.css
@@ -1,2 +1,6 @@
 .rotorsContainer {
 }
+
+.table td {
+    vertical-align: top;
+}
